--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tabcontent.css">
     <script src="js/lib/jquery-2.1.3.min.js"></script>
-    <!-- Google Analytics -->
+    <!-- Google Analytics 
     <script async src='//www.google-analytics.com/analytics.js'></script>
     <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
     ga('create', 'UA-61563497-1', 'auto');
     ga('send', 'pageview');
     </script>
-    <!-- End Google Analytics -->
+    End Google Analytics -->
   </head>
   <body>
     <div id="fb-root"></div>
@@ -517,7 +517,7 @@
           </li>
         </ol>
         
-        <script src="https://apis.google.com/js/plus.js"></script>
+        <!--<script src="https://apis.google.com/js/plus.js"></script>-->
         <script src="js/lib/bootstrap.min.js"></script>
 
         <script async src="js/lib/jquery.bpopup.min.js"></script>
