disable init server communication with server, popular input pushstate done, resolves #15

--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
         <script src='js/view/dataSessionView.js'></script>
         <script src='js/view/previewView.js'></script>
         <script src='js/view/myinputView.js'></script>
+        <script src='js/view/popinputView.js'></script>
         <script aysnc src='js/view/popupView.js'></script>
 
         <script aysnc src='js/controller/controller.js'></script>
