get group button out

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <i class="fa fa-plus-circle fa-5x"></i>
           <p class="empty">Click here to add data...</p>
         </div>
-        <div id="groupbutton" style="display: none">
+        <div id="groupbutton">
           <i class="fa fa-plus-square fa-2x"></i>
           <p>Group data...</p>
         </div>
@@ -546,6 +546,5 @@
     <script async src='js/grouplogic.js'></script>
     <script async src="js/tabcontent.js"></script>
     <script async src="js/tabHelp.js"></script>
-    <script async src='js/help.js'></script>
   </body>
 </html>
