show group button only when there are more than one entries in data session

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <i class="fa fa-plus-circle fa-5x"></i>
           <p class="empty">Click here to add data...</p>
         </div>
-        <div id="groupbutton">
+        <div id="groupbutton" class="hide">
           <i class="fa fa-plus-square fa-2x"></i>
           <p>Group data...</p>
         </div>
