added a contribute icon

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <li><p id="notice"></p></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="https://github.com/nevet/datagopro" target="_blank"><i class="fa fa-github"></i>Contribute</a></li>
             <li><a id='help' data-target="#help"><i class="fa fa-question-circle"></i>Help</a></li>
             <li><div class="loginLoadingCover"></div><a id="login"><i class="fa fa-sign-in"></i>Login</a></li>
             
